# lins

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  lins.toml  lins.toml.example
docs/: founding_session_2026_03_16.md
lins-core/: Cargo.toml
lins-core/src/: config.rs  connection.rs  graph_types.rs  lib.rs  query.rs  schema.rs
lins-server/: Cargo.toml
lins-server/src/: main.rs
lins-server/src/api/: graph.rs  mod.rs  search.rs
lins-web/: package-lock.json  package.json  vite.config.ts
lins-web/src/: app.css  app.html
lins-web/src/lib/: api.ts  types.ts
lins-web/src/lib/components/: GraphCanvas.svelte  GraphSelector.svelte  PropertyPanel.svelte  SearchBar.svelte  StatusBar.svelte
lins-web/src/lib/stores/: graph.ts
lins-web/src/routes/: +layout.svelte  +page.svelte
specs/graph-explorer/: design.md  requirements.md  tasks.md
