[package]
name = "lins-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web server for Lins FalkorDB graph explorer"

[dependencies]
lins-core = { path = "../lins-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Frontend embedding
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
